<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="headline">My Nanodegree Apps!</string>
    <string name="app_name_spotify">Popular Movies</string>
    <string name="app_name_scores">Scores App</string>
    <string name="app_name_library">Library App</string>
    <string name="app_name_buildit">Build It Bigger</string>
    <string name="app_name_reader">XYZ Reader</string>
    <string name="app_name_own">CAPSTONE: My own app</string>
    <string name="action_settings">Settings</string>
    <string name="launch_text">This button will launch </string>
</resources>
